--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,10 @@
 
 @layer components {
   .article p {
-    @apply text-zinc-200 my-6 leading-6;
+    @apply text-zinc-300 my-6 leading-7;
+  }
+
+  .article img {
+    @apply mx-auto my-6 rounded-3xl;
   }
 }
